# incubyte_work

./: .gitignore  README.md
backend/: .dockerignore  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 169503585ddb_salary_non_negative_check_constraint.py  ec33b043f926_baseline_employee_table.py
backend/scripts/: backup.sh  bench_seed.py
backend/seed_data/: last_names.txt
backend/src/salary/: __init__.py  db.py  main.py  seed.py
backend/src/salary/api/routes/: employees.py  insights.py
backend/src/salary/models/: __init__.py  employee.py
backend/src/salary/repositories/: __init__.py  employee.py
backend/src/salary/schemas/: __init__.py  employee.py  insights.py
backend/src/salary/seed_data/: README.md
backend/src/salary/services/: __init__.py  insights_service.py
backend/tests/: conftest.py  factories.py
backend/tests/api/: conftest.py  payloads.py  test_employees_get_one.py  test_employees_list.py  test_employees_patch_delete.py  test_employees_post.py  test_insights_by_country.py  test_insights_by_job_title.py  test_insights_headcount.py  test_insights_percentiles.py
backend/tests/integration/: conftest.py  test_employee_repository.py  test_employee_repository_insights.py  test_seed.py
backend/tests/unit/: test_employee.py
docs/: AI_USAGE.md  DEPLOY.md  DESIGN.md  PERFORMANCE.md  VIDEO_SCRIPT.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
infra/: .gitignore  cdn.tf  main.tf  outputs.tf  storage.tf  user-data.sh  (+2 more)
(+16 files in other folders)
